--- a/plugin.yml
+++ b/plugin.yml
@@ -5,5 +5,5 @@ load: STARTUP
 api-version: 1.16
 description: a Storage System Plugin
 author: Avankziar
-softdepend: [Vault, LWC]
+softdepend: [Vault]
 website: https://www.spigotmc.org/resources/advancedstorehouse.82337/
