--- a/roadmap.yml
+++ b/roadmap.yml
@@ -12,6 +12,38 @@ Future =========================================================================
 - Ash, erstellung von Lagertruhen mit einer Redstonekiste limitieren/prüfen,
 - Halbbefüllung der Lagertruhen tritt nur ein wenn der chunk nicht geladen wird wenn der chunk geladen ist wird die gesammte DK befüllt
 
+Build 7 =========================================
+- Verbindung mit dem Shopsystem
+DahliaSR — heute um 15:44 Uhr
+Hallo Avankziar,
+
+wie angedroht kommt nun hier mein Vorschlag dazu, die Fähgkeit des ASH zum Verteilen von Shulkerkisten, zu erweitern.
+
+Ich denke an eine zusätzliche Lagerkistenoption, die "Name" oder "Anzeigename" heissen könnte.
+In der GUI zur Konfiguration von Lagerkisten, könnte dazu ein Schalter eingefügt werden, ein Namensschild bietet sich an,
+welcher dann diese Option aktiviert.
+
+Der Sinn dahinter ist einfach.
+Es kommen immer mehr neue Items zu Minecarft dazu, die dann wiederum von den Spielern auch eingelagert werden.
+Dazu erweitern viele Spieler ihre Lager um weitere Kisten, die dann auch noch mehr Item Frames haben.
+Alles in Allem, wird der Server durch die zusätzlichen Kisten und Item Frames noch mehr belastet, und das ASH muss immer mehr Lagerkisten
+ansteuern, um die all die Items korrekt zu verteilen.
+
+Dieses Problem liesse sich eindämmen, wenn das ASH Shulkerkisten nach ihrem Anzeigenamen verteilen könnte.
+Dann benennen die Spieler ihre Shulker nach Bedarf um, z.B. "Bruchstein", und fügen eben dieses Item in den ItemFilter der entsprechenden Lagerkisten ein.
+Dann muss nur noch die neue Option in den Lagerkisten aktiviert werden und das Problem wäre gelöst.
+
+Was die Implementierung angeht, kam mir die Idee, dass diese Option dem Prinzip nach schon besteht.
+Die Material-Option, wenn aktiviert, prüft die Minecraft Item Id.
+Das könnte man quasi "kopieren" und umbennen zu "Namens-Option". Unter der Haube muss dann nur das Display Name Tag aus den NBT Daten geprüft werden.
+Diese Funktionen scheinen mir vom Prinzip her gleich.
+
+Es muss dann natürlich drauf geachtet werden, dass die "Namens-Option" und zumindest die "Material-Option" sich gegenseitig ausschließen.
+Entweder sind beide aus, oder nur genau eine von beiden kann aktiv sein.
+
+Build 6-1-0 ==================================================================================================================
+- MC 1.19 support
+
 Build 6 ============================================================================================================================
 - +Beim Gui ist nun der ColorCode richtig
 - Mit Blockinfo cmd klappt es mit mehreren die open gui funktion nicht richtig. Mit dem Ofen geht es.
