--- a/roadmap.yml
+++ b/roadmap.yml
@@ -41,6 +41,13 @@ Diese Funktionen scheinen mir vom Prinzip her gleich.
 Es muss dann natürlich drauf geachtet werden, dass die "Namens-Option" und zumindest die "Material-Option" sich gegenseitig ausschließen.
 Entweder sind beide aus, oder nur genau eine von beiden kann aktiv sein.
 
+Build 6-3-0
+- IFH-Anbindung als Provider zum spigot.storage.PhysicalChestStorage hinzugefügt.
+- IFH-Anbindung als Consumer zum spigot.shop.SignShop hinzugefügt
+- Logik zur Verteilung von Güter aus einem SignShop ins und aus dem Lagersystem hinzugefügt.
+  Dafür wurde der CollectionHandler implementiert.
+  Dies wird von SignShop-Plugin getriggert.
+
 Build 6-2-1
 - IFH Adminstration aktualisiert
 
