--- a/roadmap.yml
+++ b/roadmap.yml
@@ -41,6 +41,10 @@ Diese Funktionen scheinen mir vom Prinzip her gleich.
 Es muss dann natürlich drauf geachtet werden, dass die "Namens-Option" und zumindest die "Material-Option" sich gegenseitig ausschließen.
 Entweder sind beide aus, oder nur genau eine von beiden kann aktiv sein.
 
+Build 6-5-2
+- /ash distributionchest search, itemstack fehler fix
+- 
+
 Build 6-5-1
 - Falls man ein Block in der Hand hat, sollte beim interagieren mit einem Lagerverteilerschildes nun kein Block mehr gesetzt werden.
 
