--- a/pom.xml
+++ b/pom.xml
@@ -143,7 +143,7 @@
 		  <artifactId>interfacehub</artifactId>
 		  <version>2.0</version>
 		  <scope>system</scope>
-		  <systemPath>C:\Dev\Dev Server 1.21\interfacehub-2-0-0.jar</systemPath>
+		  <systemPath>F:\Datein\Dev\Dev Server 1.21\interfacehub-2-0-0.jar</systemPath>
     	</dependency>
 		<dependency>
 			<groupId>main.java.me.avankziar</groupId>
